# investec-api-python

./: LICENSE  README.md  openapi_auth.json  openapi_pb.json  pyproject.toml
investec_api_python/: __init__.py  client.py  http_api_client.py  sa_card_code.py  sa_pb_account_information.py
